* Tidied up behaviour of Bibcite_Library - now actually saves Bibtex strings * Now need to sort out formatting.

--- a/todo.txt
+++ b/todo.txt
@@ -15,7 +15,11 @@ To do:
 	* Bibcite_Downloader should obtain and save an up-to-date version of a remote Bibtex file - DONE
 	* Bibcite_Parser should parse a local Bibtex file and make available a list of entries - DONE
 	* Bibcite_Library should manage creation, insertion into, access to and deletion from a database of Bibtex strings - IN PROGRESS
-	* Shortcode methods should use these classes to manage bibliography output.
+		* Currently, this saves serialized arrays, which aren't much use when it comes to templating. Ideally, want to save in native Bibtex, RIS, or CSL format, and then format on output.
+	* Shortcode methods should use these classes to manage bibliography output. - IN PROGRESS
+		* What shortcodes / styles of citation do I need to support?
+		* How to generate note links? Does this need to be stylable/templatable?
+		* Render the bibliography - what style?
 
 Add admin settings:
 
