--- a/todo.txt
+++ b/todo.txt
@@ -6,13 +6,15 @@ Setup:
 * WP install is D:/wamp64/www/wordpress-bibcite-sc
 * Wordpress is "admin" / "password"
 
-Add admin settings:
+Add admin settings and features:
 
 * Citation styles and where to find them
-* Citation mode: 
-	* entry note style and entry template
-	* bibliography entry style and list template
-* Biblography mode: entry style and list template
+	* Citation mode: 
+		* entry note style and entry template
+		* bibliography entry style and list template
+	* Biblography mode: entry style and list template
+	* If there a bibliography available, let the user render one of the entries
+* Test and update params on all shortcodes
 * URL(s) of bibliographies
 	* Add the ability to upload files directly? Store in a separate dir and check dates/times periodically? Can probably use the same logic as for a remote file. Might be worth having multiple Bibcite_Library instances w/ backed either by a URL or file, and with derived/specialised download/check cache date mechanisms.
 * Local no-download time
@@ -22,6 +24,11 @@ Add admin settings:
 
 Features:
 
+* Rename files/classes
+* Go through all code:
+	* Run phpfmt (via extension)?
+	* Refactoring: can anything be done better or more reliably?
+	* Installation, activation, deactivation, uninstallation?
 * Detect CSL or RIS input libraries
 
 OrkneyDullard/converter
