--- a/todo.txt
+++ b/todo.txt
@@ -6,29 +6,30 @@ Setup:
 * WP install is D:/wamp64/www/wordpress-bibcite-sc
 * Wordpress is "admin" / "password"
 
-Add admin settings and features:
+Settings and features:
 
+* Go through all code:
+	* Refactoring
+		* Move to namespaces - IN PROGRESS
+		* Replace requires with autoload - IN PROGRESS
+	* Run phpfmt (via extension)?
+	* Activation
+	* Deactivation
+	* Uninstallation
+* Move to CSL storage in the DB
 * Citation styles and where to find them
 	* Citation mode: 
-		* bibliography entry style and list template
-		* entry note style and entry template		
-	* Biblography mode: entry style and list template
+		* bibliography entry style and list template - DONE
+		* entry note style and entry template - TODO
+	* Biblography mode: entry style and list template - DONE
 	* If there a bibliography available, let the user render one of the entries
 * Test and update params on all shortcodes
 * URL(s) of bibliographies
-	* Add the ability to upload files directly? Store in a separate dir and check dates/times periodically? Can probably use the same logic as for a remote file. Might be worth having multiple Bibcite_Library instances w/ backed either by a URL or file, and with derived/specialised download/check cache date mechanisms.
+	* Add the ability to upload files directly? Store in a separate dir and check dates/times periodically? Can probably use the same logic as for a remote file. Might be worth having multiple Bibcite_SC_Library instances w/ backed either by a URL or file, and with derived/specialised download/check cache date mechanisms.
 * Local no-download time
 * Clear all cached data
 * Log level
 * Show log
-
-Features:
-
-* Rename files/classes
-* Go through all code:
-	* Run phpfmt (via extension)?
-	* Refactoring: can anything be done better or more reliably?
-	* Installation, activation, deactivation, uninstallation?
 * Detect CSL or RIS input libraries
 * Add user-specified CSL style directory
 
