--- a/todo.txt
+++ b/todo.txt
@@ -6,7 +6,7 @@ Setup:
 * WP install is D:/wamp64/www/wordpress-bibcite-sc
 * Wordpress is "admin" / "password"
 
-* Add default Twig template
+* Add (hard coded?) default Twig template
 * Admin improvements:
 	* Add "Cleared cache" status message
 	* If there's a default bibliography available, let the user render one of the entries
@@ -19,3 +19,4 @@ Setup:
 	* CSL styles and templating
 		* All entries retrieved from the source library are rendered individually as citations, then composed into a list using a Twig template.
 * Publish to Github!
+* Tag at 1.0.0
